After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729680 - Some HTML entities not unescaped by grl.unescape()
Some HTML entities not unescaped by grl.unescape()
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: lua
git master
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-05-06 21:10 UTC by Bastien Nocera
Modified: 2014-12-05 10:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: Add htmlentity files from GtkHTML (34.83 KB, patch)
2014-11-27 14:46 UTC, Bastien Nocera
reviewed Details | Review
lua-factory: Use HTML entities helper (1.66 KB, patch)
2014-11-27 14:46 UTC, Bastien Nocera
reviewed Details | Review
lua-factory: Add htmlentity files from GtkHTML (35.05 KB, patch)
2014-12-05 10:56 UTC, Bastien Nocera
committed Details | Review
lua-factory: Use HTML entities helper (1.67 KB, patch)
2014-12-05 10:56 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-05-06 21:10:51 UTC
There's a good bunch of non-numerical entities which we should be supporting:
http://www.w3.org/TR/html4/sgml/entities.html

We might need to revise the current code slightly to be more easily extensible.
Comment 1 Bastien Nocera 2014-11-27 14:46:54 UTC
Created attachment 291657 [details] [review]
lua-factory: Add htmlentity files from GtkHTML
Comment 2 Bastien Nocera 2014-11-27 14:46:58 UTC
Created attachment 291658 [details] [review]
lua-factory: Use HTML entities helper

Which now supports more entities than what we supported.
Comment 3 Victor Toso 2014-12-02 16:35:30 UTC
Review of attachment 291657 [details] [review]:

::: src/lua-factory/Makefile.am
@@ +33,3 @@
 	grl-lua-common.h					\
+	htmlentity.c						\
+	htmlentity.h						\

It is probably interesting to move this files inside lua-library/
Comment 4 Victor Toso 2014-12-02 16:43:01 UTC
Review of attachment 291658 [details] [review]:

My intention at first with lua-library folder was to separate functions that had dependencies and also to avoid making grl-lua-library.c growing too much.

Apart from that, really good improvement.
Comment 5 Bastien Nocera 2014-12-05 10:56:54 UTC
Created attachment 292176 [details] [review]
lua-factory: Add htmlentity files from GtkHTML
Comment 6 Bastien Nocera 2014-12-05 10:56:59 UTC
Created attachment 292177 [details] [review]
lua-factory: Use HTML entities helper

Which now supports more entities than what we supported.
Comment 7 Bastien Nocera 2014-12-05 10:57:46 UTC
Attachment 292176 [details] pushed as 042a5dc - lua-factory: Add htmlentity files from GtkHTML
Attachment 292177 [details] pushed as 74604bd - lua-factory: Use HTML entities helper