lua-factory: Add htmlentity files from GtkHTML

https://bugzilla.gnome.org/show_bug.cgi?id=729680